# Mocap-Keyframe-Interpolation

./: Motion Capture Interpolation Report.docx  README.md
mocapPlayer-starter/: 131-dance.asf  135-martialArts.asf  135_06-martialArts.amc  CMakeLists.txt  Makefile  Makefile.FLTK  displaySkeleton.cpp  displaySkeleton.h  interface.cpp  interface.h  interpolate  interpolate.cpp  interpolator.cpp  interpolator.h  mocapPlayer  mocapPlayer.cpp  mocapPlayer.h  motion.cpp  motion.h  pic.cpp  posture.cpp  posture.h  ppm.cpp  quaternion.cpp  quaternion.h  skeleton.cpp  skeleton.h  transform.cpp  transform.h  types.h  vector.cpp  vector.h
mocapPlayer-starter/nbproject/: configurations.xml  project.xml
mocapPlayer-starter/nbproject/private/: Default.properties  configurations.xml  private.xml
